--- a/ecommerce/tsconfig.json
+++ b/ecommerce/tsconfig.json
@@ -22,7 +22,11 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ] ,
+    "baseUrl": "./" ,
+    "paths": {  
+      "/opt/nodejs/productsLayer" : [ "lambda/products/layers/productLayer/nodejs/productRepository" ]
+    }
   },
   "exclude": [
     "node_modules",
